--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 [build.environment]
   NODE_VERSION = "20.16.0"
 
-[# Serverless functions directory]
+# Serverless functions directory
 [functions]
   directory = "netlify/functions"
 
