--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
 
 # Headers for static files
 [[headers]]
-  for = "/sitemap.xml"
+  for = "*.xml"
   [headers.values]
     Content-Type = "application/xml; charset=utf-8"
     Cache-Control = "public, max-age=3600"
